--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -7,7 +7,7 @@ form {
     label {
         @include set-font(helper-label);
 
-        color: text-color(helper);
+        color: text-color(normal);
     }
 
     .subhead {
@@ -51,6 +51,36 @@ form {
         }
     }
 
+    .control-group {
+        margin-bottom: 3rem;
+
+        .invalid-message {
+            height: 0;
+            overflow: visible;
+        }
+    }
+
+    .control-group,
+    .radio-control-group {
+
+        > label {
+            align-items: center;
+            display: flex;
+
+            [type="radio"],
+            [type="checkbox"] {
+                margin: 0.5rem 0.5rem 0.5rem 0;
+            }
+        }
+    }
+
+    .field-label {
+        color: text-color(normal);
+        display: flex;
+        font-weight: bold;
+        height: 2rem;
+    }
+
     fieldset {
         border: 0;
     }
@@ -61,7 +91,6 @@ form {
 
         color: text-color(error);
         display: block;
-        font-style: italic;
     }
 
     &.labeled-inputs {
@@ -116,6 +145,12 @@ form {
         display: block;
     }
 
+    .field-long-label {
+        @include set-font(body-regular);
+        color: text-color(normal);
+        display: block;
+    }
+
     [type="text"],
     [type="url"],
     [type="number"],
@@ -137,14 +172,36 @@ form {
         white-space: nowrap;
         width: 100%;
 
+        // These come from pattern-library, but it has no placeholders or macros for them
         &:focus {
-            border-bottom: solid os-color(light-blue) 0.2rem;
+            border: thin solid os-color(light-blue);
+            box-shadow: 0 0 4px 0 rgba(os-color(light-blue), 0.5);
             outline: 0;
         }
 
-        &.visited:invalid {
-            border-bottom: solid ui-color(error-border) 0.2rem;
-            outline: 0;
+    }
+
+    &.submitted {
+        [type="text"],
+        [type="url"],
+        [type="number"],
+        [type="email"],
+        [type="date"],
+        textarea,
+        .selected-button {
+            &:invalid {
+                background-color: ui-color(error-bg);
+                border: thin solid ui-color(error-border);
+                box-shadow: none;
+                color: text-color(error);
+                outline: 0;
+
+                ~ .invalid-message {
+                    @extend %text-helper-label;
+                    color: text-color(error);
+                    display: block;
+                }
+            }
         }
     }
 
